conexao banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=CadastroDB
+spring.datasource.username=delgado
+spring.datasource.password=xxxxxxx
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
