--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=CadastroDB
 spring.datasource.username=delgado
-spring.datasource.password=SSS
+spring.datasource.password=xxxx
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
