--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=CadastroDB
 spring.datasource.username=delgado
-spring.datasource.password=xxxx
+spring.datasource.password=am6I3pWRfKygbAXF
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+security.ignored=none
+
+# custom path for swagger-ui
+springdoc.swagger-ui.path=/swagger-ui-custom.html
+springdoc.swagger-ui.operationsSorter=method
+# custom path for api docs
+springdoc.api-docs.path=/api-docs
+springdoc.version=@springdoc.version@
+spring.jpa.hibernate.ddl-auto=none
+######################################
