--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=CadastroDB
 spring.datasource.username=delgado
-spring.datasource.password=am6I3pWRfKygbAXF
+spring.datasource.password=xxx
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
@@ -14,3 +14,7 @@ springdoc.api-docs.path=/api-docs
 springdoc.version=@springdoc.version@
 spring.jpa.hibernate.ddl-auto=none
 ######################################
+spring.mail.host=smtp.mailtrap.io
+spring.mail.username=xxx
+spring.mail.password=xxx
+spring.mail.port=2525
