--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.mail.host=smtp.mailtrap.io
 spring.mail.username=xxx
 spring.mail.password=xxx
 spring.mail.port=2525
+######################################
+files.path=/UploadFiles
